src/components/components.css
/* ================== LETTER STYLES ================== */
.letterWrapper {
  font-size: 40px;
  font-weight: 600;
  background: transparent;
  filter: drop-shadow(2px 2px 2px var(--color-green)) invert(0%);
  transition: var(--transition);
}

.letterWrapper.hover{
  color: var(--color-red);
  background: transparent;
  filter: drop-shadow(2px 2px 2px var(--color-green)) invert(0%);
  animation: animate 0.5s;
}

.lettersWrapper {
  background: transparent;
  display: flex;
}

@keyframes animate {
  0%,40%,100% {
    transform: translateY(0)
  }
  20% {
    transform: translateY(-5px)
  }
}

/* ================== GLITCH STYLES ================== */
.glitch {
  font-size: 8rem;
  font-weight: bold;
  position: relative;
  width: 100%;
  
  animation: glitch 1000ms infinite;
}

.glitch span{
  position: absolute;
  width: 100%;
  top: 0;
  left: 0;
}

.glitch span:first-child{
  animation: glitch 750ms infinite;
  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 45%);
  transform: translate(-0.025em, -0.0125em);
}

.glitch span:last-child{
  animation: glitch 650ms infinite;
  clip-path: polygon(0 60%, 100% 60%, 100% 100%, 0 100%);
  transform: translate(0.0125em, 0.025em);
}

@keyframes glitch {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 1;
    transform: translate(0.05em, 0);
  }
  49% {
    opacity: 0;
    transform: translate(0.025em, 0);
  }
  50% {
    opacity: 1;
  }
  75% {
    opacity: 1;
  }
  99% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
  
}

